--- a/index.html
+++ b/index.html
@@ -18,4 +18,26 @@
       한 여름밤, 작은방 안 한 마리 모기의 존재감은 하루를 앗아가기에 충분하다. 치사하게 몸을 숨기는 모기를 잡을 때까지 짜증과 스트레스는 끝나지 않는다. 나는 이런 벌레가 성가시고 징그럽다. 이 작은 존재와 함께 하는 것이 어디 이런 짜증스러운 순간뿐일까. 하수구의 작은 구멍을 비집고 꿈틀거리며 올라오는 바퀴벌레와 눈이 마주치는 순간처럼 벌레와의 찰나가 영겁의 공포와 같은 임팩트를 남기기도 한다.<p>
       이렇게 나를 괴롭히는 벌레 같은 것이 또 있다. 일상의 틈으로 기어오르는, 사소하지만 징그럽고 짜증 나는 삶의 문제들이 그것이다. 나는 이 작은 문제들을 대처하는 게 어렵다. 갑자기 나타난 작은 벌레 같은 짧은 순간이 무서워서 침착하지 못하고 엉뚱한 대책을 세우고, 때로는 한 발 뒷걸음치는 것으로도 모자라 100리 멀리로 도망간다.<p>
       ‘빈대 잡으려다 초가삼간 다 태운다.’ 별것도 아닌 일에 유난을 떨 때면 생각나는 말이다. 이번 전시는 빈대 잡으려다 초가삼간 다 태우는 도예가의 이야기다. 방 안에 자리 잡은 작은 벌레 하나 때문에 집을 버리고 싶은 어설픈 마음과 헛다리를 짚는 나의 엉뚱한 발명품들. 남들이 보기엔 하찮고 사소하지만 나에겐 너무 두렵고 거대한 ‘벌레’와 이에 맞서는 나의 유난스러운 방법에 대해 이야기하려 한다. 그래도 어쩌면, 초가삼간 다 태웠기에 얻게 되는 게 있을지도 모른다고 위안하면서 말이다.<p>
+<p>
+  <p>
+
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://open-space4.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
